fix overflow-x hidden

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -13,6 +13,7 @@ body {
 body,
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 h1,
